--- a/secrets.yml
+++ b/secrets.yml
@@ -6,5 +6,5 @@ metadata:
 type: Opaque
 data:
   # Base64 encoded.
-  mongo-root-username: YWRtaW4=
-  mongo-root-password: YWRtaW4xMjM=
+  mongo-root-username: "admin"
+  mongo-root-password: "admin123"
