add new secrets.yml

--- a/secrets.yml
+++ b/secrets.yml
@@ -5,5 +5,5 @@ metadata:
   namespace: job-tracker
 type: Opaque
 data:
-  mongo-root-username: admin
-  mongo-root-password: admin123
+  mongo-root-username: "admin"
+  mongo-root-password: "admin123"
