--- a/mongo-secret.yml
+++ b/mongo-secret.yml
@@ -5,5 +5,6 @@ metadata:
   namespace: job-tracker
 type: Opaque
 data:
-  mongo-root-username: "admin"
-  mongo-root-password: "admin123"
+  # Base64 encoded.
+  mongo-root-username: YWRtaW4=
+  mongo-root-password: YWRtaW4xMjM=
