--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - containerPort: 8080
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: "mongodb://$(MONGO_INITDB_ROOT_USERNAME):$(MONGO_INITDB_ROOT_PASSWORD)@mongodb-service.job-tracker.svc.cluster.local:27017/job-tracker-db?authSource=admin"
+              value: "mongodb://$(MONGO_INITDB_ROOT_USERNAME):$(MONGO_INITDB_ROOT_PASSWORD)@mongodb-0.mongodb-service/job-tracker-db?authSource=admin"
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
