--- a/mongo-statefulset-service.yaml
+++ b/mongo-statefulset-service.yaml
@@ -1,13 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongodb-service
-  namespace: job-tracker
-spec:
-  clusterIP: None
-  selector:
-    app: mongodb
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -29,14 +19,27 @@ spec:
           image: mongo:7.0
           ports:
             - containerPort: 27017
+          # This section tells MongoDB to use the credentials from your secret
+          # It will create the user on its first startup with an empty volume.
           env:
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: mongodb-secret
                   key: mongo-root-username
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: mongodb-secret
                   key: mongo-root-password
+          volumeMounts:
+            - name: mongo-data
+              mountPath: /data/db
+  volumeClaimTemplates:
+    - metadata:
+        name: mongo-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi
