fix typo in mongodb-secret.yml

--- a/mongo-statefulset-service.yaml
+++ b/mongo-statefulset-service.yaml
@@ -25,15 +25,15 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: mongodb-secret
                   key: mongo-root-username
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: mongodb-secret
                   key: mongo-root-password
           volumeMounts:
-            - name: mongo-data
+            - name: mongodb-secret
               mountPath: /data/db
   volumeClaimTemplates:
     - metadata:
