update backend-deployment.yaml spring data mongodb

--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -23,16 +23,16 @@ spec:
             - containerPort: 8080
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: "mongodb://$(MONGO_INITDB_ROOT_USERNAME):$(MONGO_INITDB_ROOT_PASSWORD)@mongodb-0.mongodb-service/job-tracker-db?authSource=admin"
+              value: "mongodb://$(mongo-root-username):$(mongo-root-password)@mongodb-0.mongodb-service/job-tracker-db?authSource=admin"
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: mongodb-secret
                   key: mongo-root-username
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: mongodb-secret
                   key: mongo-root-password
 ---
 apiVersion: v1
