--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
-  namespace: job-tracker
+  namespace: job-tracker-app
 spec:
   replicas: 1
   selector:
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  namespace: job-tracker
+  namespace: job-tracker-app
 spec:
   selector:
     app: frontend
