--- a/mongodb-secret.yml
+++ b/mongodb-secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secret
-  namespace: job-tracker
+  namespace: job-tracker-app
 type: Opaque
 data:
   # Base64 encoded.
