Fix indentation in ingress.yaml for http section

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   ingressClassName: nginx
   rules:
     - host: 192.168.49.2
-    - http:
+      http:
         paths:
           - path: /
             pathType: Prefix
