--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: job-tracker-ingress
   namespace: job-tracker-app
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   ingressClassName: nginx
   rules:
