--- a/ingress.yaml
+++ b/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: 192.168.49.2
+    - host: argocd.local
       http:
         paths:
           - path: /
