Change host from argocd.local to frontend.local

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: argocd.local
+    - host: frontend.local
       http:
         paths:
           - path: /
