--- a/ingress.yaml
+++ b/ingress.yaml
@@ -16,3 +16,14 @@ spec:
                 name: frontend-service
                 port:
                   number: 80
+    - host: backend.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 8080
+
