--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -31,7 +31,8 @@ spec:
                   name: mongodb-secret
                   key: mongo-root-password
             - name: SPRING_DATA_MONGODB_URI
-              value: "mongodb://$(MONGO_INITDB_ROOT_USERNAME):$(MONGO_INITDB_ROOT_PASSWORD)@mongodb-service:27017/job-tracker-db?authSource=admin"
+              value: "mongodb://$(MONGO_INITDB_ROOT_USERNAME):$(MONGO_INITDB_ROOT_PASSWORD)@$(SPRING_DATA_MONGODB_HOST):$(SPRING_DATA_MONGODB_PORT)/$(SPRING_DATA_MONGODB_DATABASE)?authSource=$(SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE)"
+
 ---
 apiVersion: v1
 kind: Service
